# DOH

./: .gitignore  CODE_QUALITY.md  DAEMON_SETUP.md  LICENSE  Makefile  README.md  README_git_autocommit.md  auto_commit_monitor.sh  build  build-release  cron-setup.sh  debug-json.sh  doh  doh-config.py  doh-daemon  doh-daemon@.service  doh-setup  doh.py  git_auto_commit.py  ideas.txt  install  install.sh  newtest.txt  pip-install  private_notes.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  setup_git_autocommit_cron.sh  systemd-setup.sh  test-doh.sh  test.txt  test_doh.py  test_lines.txt  uninstall  validate  watchdog_example.py
.githooks/: pre-commit
scripts/: dev-setup  doh-daemon@.service  doh-daemon@.timer  systemd-setup
src/doh/: __init__.py  __main__.py  cli.py  cli_original.py  colors.py  command_handlers.py  config.py  config_management.py  core.py  git_operations.py  git_stats.py  status_display.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_cli.py  test_cli_edge_cases.py  test_colors.py  test_config_edge_cases.py  test_core_edge_cases.py  test_defaults.py  test_doh.py  test_git_stats.py  test_git_stats_edge_cases.py
