[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doh-monitor"
version = "2.0.0"
description = "Directory Oh-no, Handle this! - Smart auto-commit monitoring system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DOH Project"}
]
keywords = ["git", "monitoring", "auto-commit", "development", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
doh = "doh.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/doh"
Repository = "https://github.com/yourusername/doh"
Documentation = "https://github.com/yourusername/doh/wiki"
"Bug Tracker" = "https://github.com/yourusername/doh/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
doh = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
